--- a/testng/test-output/emailable-report.html
+++ b/testng/test-output/emailable-report.html
@@ -8,12 +8,15 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">33</td><td></td><td></td></tr>
+<tr><th colspan="7">testsuite</th></tr>
+<tr><td><a href="#t0">login</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">40</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">pay</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">6</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num">0</th><th class="num">46</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">pri.study.first.First</td><td><a href="#m0">test1</a></td><td rowspan="1">1525868643823</td><td rowspan="1">5</td></tr><tr class="passedeven"><td><a href="#m1">test2</a></td><td rowspan="1">1525868643831</td><td rowspan="1">1</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">testsuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">login &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">pri.study.suit.Login</td><td><a href="#m0">login</a></td><td rowspan="1">1525871655096</td><td rowspan="1">6</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">pay &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">pri.study.suit.Pay</td><td><a href="#m1">pay</a></td><td rowspan="1">1525871655146</td><td rowspan="1">2</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">pri.study.first.First#test1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">pri.study.first.First#test2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>login</h2><h3 id="m0">pri.study.suit.Login#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>pay</h2><h3 id="m1">pri.study.suit.Pay#pay</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
