--- a/testng/test-output/emailable-report.html
+++ b/testng/test-output/emailable-report.html
@@ -8,18 +8,13 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num attn">2</td><td class="num">84</td><td></td><td></td></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">4,242</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="2">pri.study.report.AssertLog</td><td><a href="#m0">logDemo</a></td><td rowspan="1">1525886966093</td><td rowspan="1">1</td></tr><tr class="failedeven"><td><a href="#m1">test1</a></td><td rowspan="1">1525886966042</td><td rowspan="1">41</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">pri.study.report.AssertLog</td><td><a href="#m2">test2</a></td><td rowspan="1">1525886966087</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m3">test3</a></td><td rowspan="1">1525886966090</td><td rowspan="1">2</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">pri.study.timeout.Timeout</td><td><a href="#m0">testFailed</a></td><td rowspan="1">1525931676806</td><td rowspan="1">2161</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">pri.study.timeout.Timeout</td><td><a href="#m1">testSuccess</a></td><td rowspan="1">1525931678979</td><td rowspan="1">2004</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">pri.study.report.AssertLog#logDemo</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">report log output</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.RuntimeException: 运行时抛出异常
-	at pri.study.report.AssertLog.logDemo(AssertLog.java:23)
-... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">pri.study.report.AssertLog#test1</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [2] but found [1]
-	at pri.study.report.AssertLog.test1(AssertLog.java:10)
-... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">pri.study.report.AssertLog#test2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">pri.study.report.AssertLog#test3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">pri.study.timeout.Timeout#testFailed</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.internal.thread.ThreadTimeoutException: Method pri.study.timeout.Timeout.testFailed() didn&apos;t finish within the time-out 2000
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">pri.study.timeout.Timeout#testSuccess</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
