--- a/testng/test-output/old/Default suite/methods.html
+++ b/testng/test-output/old/Default suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7471b5">  <td>18/05/10 01:12:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Timeout.testFailed()[pri:0, instance:pri.study.timeout.Timeout@16d4b5c]">testFailed</td> 
-  <td>main@9335632</td>   <td></td> </tr>
-<tr bgcolor="7471b5">  <td>18/05/10 01:12:26</td>   <td>2107</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Timeout.testSuccess()[pri:0, instance:pri.study.timeout.Timeout@16d4b5c]">testSuccess</td> 
-  <td>main@9335632</td>   <td></td> </tr>
+<tr bgcolor="abef66">  <td>18/05/10 13:54:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Timeout.testFailed()[pri:0, instance:pri.study.timeout.Timeout@c0edeb]">testFailed</td> 
+  <td>main@23620895</td>   <td></td> </tr>
+<tr bgcolor="abef66">  <td>18/05/10 13:54:38</td>   <td>2177</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Timeout.testSuccess()[pri:0, instance:pri.study.timeout.Timeout@c0edeb]">testSuccess</td> 
+  <td>main@23620895</td>   <td></td> </tr>
 </table>
