--- a/testng/test-output/old/Suite/methods-alphabetical.html
+++ b/testng/test-output/old/Suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="abef66">  <td>18/05/10 01:29:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssertLog.logDemo()[pri:0, instance:pri.study.report.AssertLog@78c730]">logDemo</td> 
-  <td>main@16832177</td>   <td></td> </tr>
-<tr bgcolor="abef66">  <td>18/05/10 01:29:26</td>   <td>-51</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssertLog.test1()[pri:0, instance:pri.study.report.AssertLog@78c730]">test1</td> 
-  <td>main@16832177</td>   <td></td> </tr>
-<tr bgcolor="abef66">  <td>18/05/10 01:29:26</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssertLog.test2()[pri:0, instance:pri.study.report.AssertLog@78c730]">test2</td> 
-  <td>main@16832177</td>   <td></td> </tr>
-<tr bgcolor="abef66">  <td>18/05/10 01:29:26</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssertLog.test3()[pri:0, instance:pri.study.report.AssertLog@78c730]">test3</td> 
-  <td>main@16832177</td>   <td></td> </tr>
+<tr bgcolor="96a48d">  <td>18/05/14 21:55:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssertLog.logDemo()[pri:0, instance:pri.study.report.AssertLog@1aeed2f]">logDemo</td> 
+  <td>main@8764910</td>   <td></td> </tr>
+<tr bgcolor="96a48d">  <td>18/05/14 21:55:31</td>   <td>-31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssertLog.test1()[pri:0, instance:pri.study.report.AssertLog@1aeed2f]">test1</td> 
+  <td>main@8764910</td>   <td></td> </tr>
+<tr bgcolor="96a48d">  <td>18/05/14 21:55:31</td>   <td>-5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssertLog.test2()[pri:0, instance:pri.study.report.AssertLog@1aeed2f]">test2</td> 
+  <td>main@8764910</td>   <td></td> </tr>
+<tr bgcolor="96a48d">  <td>18/05/14 21:55:31</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssertLog.test3()[pri:0, instance:pri.study.report.AssertLog@1aeed2f]">test3</td> 
+  <td>main@8764910</td>   <td></td> </tr>
 </table>
